--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,13 +2,14 @@ group 'dev.fluttercommunity.plus.battery'
 version '1.0-SNAPSHOT'
 
 buildscript {
+    ext.kotlin_version = '1.9.10'
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.1'
+        classpath 'com.android.tools.build:gradle:8.1.2'
     }
 }
 
