--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: battery_plus
 publish_to: none
 description: Flutter plugin for accessing information about the battery state(full, charging, discharging).
-version: 4.0.2
+version: 4.1.0
 homepage: https://plus.fluttercommunity.dev/
 repository: https://github.com/fluttercommunity/plus_plugins/tree/main/packages/battery_plus/battery_plus
 issue_tracker: https://github.com/fluttercommunity/plus_plugins/labels/battery_plus
@@ -13,7 +13,7 @@ flutter:
         package: dev.fluttercommunity.plus.battery
         pluginClass: BatteryPlusPlugin
       ios:
-        pluginClass: FLTBatteryPlusPlugin
+        pluginClass: FPPBatteryPlusPlugin
       linux:
         dartPluginClass: BatteryPlusLinuxPlugin
       macos:
